--- a/index.html
+++ b/index.html
@@ -763,5 +763,16 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-4829688-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-4829688-4');
+</script>
+
+
 </body>
 </html>
