added domain description on consulting

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <h2 class="s-title">Architecture Consulting</h2>
               <p class="s-description text-center">
               Designing a solution for your enterprise or a customer using Open Source softwares?. I can analyze
-              your requirements and advise you on a baseline architecture and implementation roadmap for your solution. 
+              your requirements and advise you on a baseline architecture and implementation roadmap for your solution. I specialize in designing scalable data analytics systems, IoT systems, data lake, data warehouses, and knowledge management systems using 100% Open Source softwares. 
               </p>
             </div>
           </div>
