added blog link

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                       <p style="font-size:30px">
                         <a href="https://linkedin.com/in/kagesenshi" class="ion-social-linkedin"></a>
                         <a href="https://github.com/kagesenshi" class="ion-social-github"></a>
+                        <a href="https://blog.kagesenshi.org" class="ion-social-rss"></a>
                       </p>
                     </div>
                   </div>
@@ -467,6 +468,8 @@
                           <span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                        <li><a href="https://github.com/kagesenshi">
                           <span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                       <li><a href="https://blog.kagesenshi.org">
+                          <span class="ico-circle"><i class="ion-social-rss"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
