add opengraph metadata

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
+  <meta property="og:title" content="kagesenshi.org" />
+  <meta property="og:type" content="article" />
+  <meta property="org:url" content="http://www.kagesenshi.org" />
+  <meta property="og:image" content="http://www.kagesenshi.org/img/intro-bg.jpg" />
+
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
