--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:type" content="article" />
   <meta property="org:url" content="http://www.kagesenshi.org" />
   <meta property="og:image" content="http://www.kagesenshi.org/img/intro-bg.jpg" />
+  <meta property="og:description" content="Technology Architect, Data Engineer, Python Programmer, Trainer, Developer Evangelist" />
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
