--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="kagesenshi.org" />
   <meta property="og:type" content="article" />
-  <meta property="org:url" content="http://www.kagesenshi.org" />
+  <meta property="og:url" content="http://www.kagesenshi.org" />
   <meta property="og:image" content="http://www.kagesenshi.org/img/intro-bg.jpg" />
   <meta property="og:description" content="Technology Architect, Data Engineer, Python Programmer, Trainer, Developer Evangelist" />
 
