--- a/index.html
+++ b/index.html
@@ -166,40 +166,56 @@
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
-      <div class="row">
-        <div class="col-sm-4 col-lg-4">
-          <div class="counter-box">
+       <div class="row">
+        <div class="col-sm-3 col-lg-3">
+          <div class="counter-box pt-4 pt-md-0">
+            <div class="counter-ico">
+              <span class="ico-circle"><i class="ion-merge"></i></span>
+            </div>
+            <div class="counter-num">
+               <span class="counter-text">CONTRIBUTED TO</span>
+               <p class="counter">3</p>
+               <span class="counter-text">MAJOR OPEN SOURCE COMMUNITIES</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3 col-lg-3">
+          <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
+              <span class="counter-text">COMPLETED</span>
               <p class="counter">11</p>
-              <span class="counter-text">PROJECTS COMPLETED</span>
+              <span class="counter-text">ENTERPRISE PROJECTS</span>
             </div>
           </div>
         </div>
-        <div class="col-sm-4 col-lg-4">
+        <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
+              <span class="counter-text">MORE THAN</span>
               <p class="counter">10</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
         </div>
-        <div class="col-sm-4 col-lg-4">
+        <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
             <div class="counter-ico">
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">90</p>
-              <span class="counter-text">TOTAL PEOPLE TRAINED</span>
+              <span class="counter-text">MORE THAN</span>
+               <p class="counter">95</p>
+              <span class="counter-text">PEOPLE TRAINED</span>
             </div>
           </div>
-        </div>
+       </div>
+
       </div>
     </div>
   </div>
