--- a/index.html
+++ b/index.html
@@ -492,6 +492,8 @@
                           <span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                        <li><a href="https://blog.kagesenshi.org">
                           <span class="ico-circle"><i class="ion-social-rss"></i></span></a></li>
+                       <li><a href="hangout.html">
+                          <span class="ico-circle"><i class="ion-ios-videocam"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
