redirect only if not mobile

--- a/hangout.html
+++ b/hangout.html
@@ -2,10 +2,15 @@
 <html>
    <head>
       <title>Hangout Call</title>
-      <meta http-equiv = "refresh" content = "0; url = https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh" />
    </head>
    <body>
-      <p>Redirecting to Hangout Call</p>
-      <p><a href="https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh">Click here if you are not redirected</a></p>
+      <script type="text/javascript">
+   <!--
+   if (screen.width >= 699) {
+   document.location = "https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh";
+   }
+   //-->
+   </script>
+      <p><a href="https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh">Join Call</a></p>
    </body>
 </html>
