make things prettier

--- a/hangout.html
+++ b/hangout.html
@@ -2,15 +2,32 @@
 <html>
    <head>
       <title>Hangout Call</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+      <script type="text/javascript">
+      if (screen.width >= 699) {
+//      document.location = "https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh";
+      }
+      </script>
    </head>
    <body>
-      <script type="text/javascript">
-   <!--
-   if (screen.width >= 699) {
-   document.location = "https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh";
-   }
-   //-->
-   </script>
-      <p><a href="https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh">Join Call</a></p>
+      <br/>
+      <div class="container">
+         <div class="row">
+            <div class="col-md-4 col-sm-1">
+               &nbsp;
+            </div>
+            <div class="col-md-4 col-sm-10">
+               
+               <a class="btn btn-block btn-lg btn-primary" href="https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh">
+                  <i class="fa fa-phone"></i> Join Call</a>
+            </div>
+            <div class="col-md-4 col-sm-1">
+               &nbsp;
+            </div>
+         </div>
+      </div>
+
    </body>
 </html>
