--- a/hangout.html
+++ b/hangout.html
@@ -15,15 +15,15 @@
       <br/>
       <div class="container">
          <div class="row">
-            <div class="col-md-4 col-sm-1">
+            <div class="col-lg-4 col-md-1 col-sm-1">
                &nbsp;
             </div>
-            <div class="col-md-4 col-sm-10">
+            <div class="col-lg-4 col-md-10 col-sm-10">
                
                <a class="btn btn-block btn-lg btn-primary" href="https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh">
                   <i class="fa fa-phone"></i> Join Call</a>
             </div>
-            <div class="col-md-4 col-sm-1">
+            <div class="col-lg-4 col-md-1 col-sm-1">
                &nbsp;
             </div>
          </div>
