auto redirect for large screens

--- a/hangout.html
+++ b/hangout.html
@@ -13,7 +13,7 @@
       <title>KageSenshi Hangout Call</title>
       <script type="text/javascript">
       if (screen.width >= 699) {
-      //    document.location = "https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh";
+          document.location = "https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh";
       }
       </script>
    </head>
