update contact icon

--- a/vcard.html
+++ b/vcard.html
@@ -58,14 +58,14 @@
                 </div>
                 <div class="col-sm-7 col-md-8">
                   <div class="about-info">
-                    <p><span class="title-s">Name: </span> <span>Izhar Firdaus</span></p>
-                    <p><span class="title-s">Profile: </span> <span>Solution Architect / Data Engineer</span></p>
-                    <p><span class="title-s">Phone: </span> <span>(+60)17-2792765</span></p>
+		    <p><b>Izhar Firdaus</b></p>
+                    <p><span>Solution Architect / Data Engineer</span></p>
+                    <p><span>(+60)17-2792765</span></p>
                     <p style="font-size:30px">
                       <a href="https://linkedin.com/in/kagesenshi" class="ion-social-linkedin"></a>
                       <a href="https://github.com/kagesenshi" class="ion-social-github"></a>
                       <a href="https://blog.kagesenshi.org" class="ion-social-rss"></a>
-                      <a class="btn btn-primary" href="/vcard.vcf">Save Contact<i class="fa fa-chevron-up"></i></a>
+                      <a class="btn btn-primary" href="/vcard.vcf">Save Contact <i class="fa fa-vcard"></i> </a>
                     </p>
                   </div>
                 </div>
