fix photo ratio

--- a/vcard.html
+++ b/vcard.html
@@ -47,16 +47,16 @@
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="contact-mf">
             <div id="contact" class="box-shadow-full">
               <div class="row">
-                <div class="col-sm-5 col-md-4">
+                <div class="col-4">
                   <div class="about-img">
                     <img src="img/profile.jpg" class="img-fluid rounded-circle b-shadow-a" alt="">
                   </div>
                 </div>
-                <div class="col-sm-7 col-md-8">
+                <div class="col-8">
                   <div class="about-info">
 		    <p><b>Izhar Firdaus</b></p>
                     <p><span>Solution Architect / Data Engineer</span></p>
@@ -65,7 +65,7 @@
                       <a href="https://linkedin.com/in/kagesenshi" class="ion-social-linkedin"></a>
                       <a href="https://github.com/kagesenshi" class="ion-social-github"></a>
                       <a href="https://blog.kagesenshi.org" class="ion-social-rss"></a>
-                      <a class="btn btn-primary" href="/vcard.vcf">Save Contact <i class="fa fa-vcard"></i> </a>
+                      <a class="btn btn-primary" href="vcard.vcf">Save Contact <i class="fa fa-vcard"></i> </a>
                     </p>
                   </div>
                 </div>
