--- a/vcard.html
+++ b/vcard.html
@@ -43,13 +43,14 @@
 </head>
 
 <body id="page-top">
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
+  <section id="contact"
+	  class="bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="contact-mf">
-            <div id="contact" class="box-shadow-full">
+            <div class="box-shadow-full">
               <div class="row">
                 <div class="col-4">
                   <div class="about-img">
@@ -76,7 +77,7 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer style="padding:0">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -128,6 +129,10 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-4829688-4');
+
+    $(document).ready(function () {
+        $('#contact').height($(window).height());
+    })
   </script>
 
 
