update hangout url

--- a/hangout.html
+++ b/hangout.html
@@ -13,7 +13,7 @@
       <title>KageSenshi Hangout Call</title>
       <script type="text/javascript">
       if (screen.width >= 699) {
-          document.location = "https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh";
+          document.location = "https://meet.google.com/yaq-hhqp-zeb";
       }
       </script>
    </head>
@@ -26,7 +26,7 @@
             </div>
             <div class="col-lg-4 col-md-10 col-sm-10">
                
-               <a class="btn btn-block btn-lg btn-primary" href="https://hangouts.google.com/hangouts/_/calendar/a2FnZXNlbnNoaS44N0BnbWFpbC5jb20.5u6ruui9oi9vmutq2et13f2goh">
+               <a class="btn btn-block btn-lg btn-primary" href="https://meet.google.com/yaq-hhqp-zeb">
                   <i class="fa fa-phone"></i> Join Call</a>
             </div>
             <div class="col-lg-4 col-md-1 col-sm-1">
